# USTC-2023-compilers-lab

./: CMakeLists.txt  README.md
include/cminusfc/: cminusf_builder.hpp
include/codegen/: ASMInstruction.hpp  CodeGen.hpp  CodeGenUtil.hpp  Register.hpp
include/common/: ast.hpp
include/lightir/: BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  IRprinter.hpp  Instruction.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp
include/passes/: DeadCode.hpp  Dominators.hpp  FuncInfo.hpp  Mem2Reg.hpp  PassManager.hpp
reports/1-parser/: README.md
src/: CMakeLists.txt
src/cminusfc/: CMakeLists.txt  Readme.md  cminusf_builder.cpp  cminusfc.cpp
src/codegen/: CMakeLists.txt  CodeGen.cpp  Register.cpp
src/common/: ast.cpp
src/io/: io.h
src/lightir/: BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/logging/: CMakeLists.txt  test_ast.cpp  test_logging.cpp
src/parser/: CMakeLists.txt  lexical_analyzer.l  parser.c  syntax_analyzer.y
src/passes/: CMakeLists.txt  DeadCode.cpp  Dominators.cpp  FuncInfo.cpp  Mem2Reg.cpp
tests/: CMakeLists.txt
tests/1-parser/: README.md  cleanup.sh  eval_lab1.sh  test_syntax.sh
tests/3-codegen/warmup/: CMakeLists.txt
tests/3-codegen/warmup/ll_cases/: assign.ll  fcmp.ll  float.ll  function.ll  global.ll  icmp.ll
tests/3-codegen/warmup/stu_cpp/: assign_codegen.cpp  fcmp_codegen.cpp  float_codegen.cpp  function_codegen.cpp  global_codegen.cpp  icmp_codegen.cpp
tests/4-mem2reg/: eval_lab4.sh  log.txt  test_perf.sh
tests/testcases_general/: 10-funcall.cminus  13-if_stmt.cminus  (+14 more)
(+138 files in other folders)
